--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       --gruen:   rgb(0, 166, 82);
       --orange:  rgb(249, 150, 30);
 
-      /* ✅ echtes 8×8 ohne Zwischenräume */
+      /* echtes 8×8 ohne Zwischenräume */
       --cell-gap: 0px;
       --cell-radius: 0px;
 
@@ -24,7 +24,7 @@
       --cube-wood-warm: rgba(155, 70, 110, 0.10);
       --cube-wood-gold: rgba(249, 150, 30, 0.10);
 
-      /* W1 Innenrahmen (dein Gamma-Rand) */
+      /* W1 Innenrahmen (Gamma-Rand) */
       --w1-innerframe: rgba(122, 74, 52, 1);
 
       --slot-border: rgba(0,0,0,0.55);
@@ -98,10 +98,6 @@
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
       --step: calc(var(--cell) + var(--cell-gap));
 
-      /* Kugelmittelpunkt (identisch zur Floor-Mitte) */
-      --axis-x: calc(4 * var(--step) - (var(--cell-gap) / 2));
-      --seam-y: calc(4 * var(--step) - (var(--cell-gap) / 2));
-
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
@@ -130,7 +126,7 @@
     .c-violett{ background: var(--violett); }
     .c-blau  { background: var(--blau);   }
 
-    /* ✅ NEU: jedes Farbfeld bekommt 2px Innenrahmen (ergibt optisch 4px zwischen zwei Farbfeldern) */
+    /* jedes Farbfeld bekommt 2px Innenrahmen (optisch 4px zwischen zwei Farbfeldern) */
     .cell.colorCell{
       box-shadow:
         inset 0 0 0 2px #000,
@@ -152,10 +148,8 @@
       z-index: 2;
       pointer-events: none;
 
-      /* ✅ 2px schwarzer Innenrahmen am Innenausschnitt des Boxrahmens */
+      /* ✅ FIX: KEIN schwarzer Innenrahmen am Boxboden */
       box-shadow:
-        inset 0 0 0 2px rgba(0,0,0,1),
-
         inset 18px 18px 34px rgba(255,255,255,0.10),
         inset -22px -22px 44px rgba(0,0,0,0.28),
         inset -26px 0 40px rgba(0,0,0,0.26),
@@ -181,16 +175,6 @@
       pointer-events: none;
     }
 
-    /* Alt-Layer bleiben drin, aber unsichtbar (zum späteren Wiederverwenden) */
-    .pairLayer,
-    .w3w2BaseLayer,
-    .w3w2KipLayer{
-      display:none !important;
-      opacity: 0 !important;
-      visibility: hidden !important;
-      pointer-events:none !important;
-    }
-
     /* ==========================
        W1 (Q0) – sichtbar
        ========================== */
@@ -200,8 +184,6 @@
       inset:0;
       z-index: 5; /* über Floor, unter Ball */
       pointer-events:none;
-      opacity: 1;
-      visibility: visible;
     }
 
     /* Schattenelement unter W1 – nur nach Osten + Süden */
@@ -242,7 +224,7 @@
         linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
         linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
 
-      /* ✅ Innenrahmen, ohne Vergrößerung */
+      /* Innenrahmen, ohne Vergrößerung */
       box-shadow:
         inset 0 0 0 2px var(--w1-innerframe),
         0 0 0 1px rgba(255,255,255,0.08) inset;
@@ -354,12 +336,12 @@
       <div class="ball" aria-label="Kugel"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- ✅ W1 sichtbar (Q0) -->
+      <!-- W1 sichtbar (Q0) -->
       <div class="w1Layer" id="w1Layer" aria-label="W1 (Q0) sichtbar">
         <div class="w1Shadow" aria-hidden="true"></div>
         <div class="w1Cube" aria-label="W1 Würfelfläche"></div>
 
-        <!-- ✅ Zahlenfuß zum Farbfeld:
+        <!-- Zahlenfuß zum Farbfeld:
              3B/4B -> Farbfeld links => read-west
              2C/2D -> Farbfeld oben  => read-north -->
         <div class="slot w1-4b read-west"  data-w1="A1"><div class="num"><span></span></div></div>
@@ -367,11 +349,6 @@
         <div class="slot w1-2c read-north" data-w1="A3"><div class="num"><span></span></div></div>
         <div class="slot w1-2d read-north" data-w1="A4"><div class="num"><span></span></div></div>
       </div>
-
-      <!-- bleiben drin, aber unsichtbar -->
-      <div class="pairLayer" id="pairLayer"></div>
-      <div class="w3w2BaseLayer" id="w3w2BaseLayer"></div>
-      <div class="w3w2KipLayer" id="w3w2KipLayer"></div>
     </div>
 
     <div class="controls">
@@ -425,7 +402,7 @@
 
           if(colorMap.has(coord)){
             cell.classList.add(colorMap.get(coord));
-            cell.classList.add("colorCell"); // ✅ 2px Innenrahmen rundum
+            cell.classList.add("colorCell"); // 2px Innenrahmen rundum
           }
 
           grid.appendChild(cell);
